<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout_step"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/ToolbarExpandedTextWithShadow"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/image_step_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/alt_step_backdrop"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_step_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/step_detail_container_single"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <jahirfiquitiva.libs.fabsmenu.FABsMenuLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fab:fabs_menu_clickableOverlay="true"
        tools:layout_behavior="@string/fabs_menu_layout_behavior">

        <jahirfiquitiva.libs.fabsmenu.FABsMenu
            android:id="@+id/fab_menu_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clipChildren="false"
            fab:fab_expandDirection="up"
            fab:fab_labelsPosition="left"
            fab:fab_menuMargins="16dp"
            fab:fab_moreButtonBackgroundColor="@color/colorAccent"
            fab:fab_moreButtonPlusIcon="@drawable/ic_code_black_24dp"
            fab:fab_moreButtonRippleColor="@color/colorAccentLight"
            fab:fab_moreButtonSize="normal">

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/fab_item_step_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_enableTitleClick="false"
                app:fab_title_backgroundColor="@color/primaryTextColor"
                fab:fabSize="mini"
                fab:fab_title="@string/step_go_to_next"
                fab:fab_title_textColor="@color/material_white"
                fab:rippleColor="@color/colorAccentLight"
                fab:srcCompat="@drawable/ic_arrow_forward_black_24dp"/>

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/fab_item_step_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_enableTitleClick="false"
                app:fab_title_backgroundColor="@color/primaryTextColor"
                fab:fabSize="mini"
                fab:fab_title="@string/step_go_to_previous"
                fab:fab_title_textColor="@color/material_white"
                fab:rippleColor="@color/colorAccentLight"
                fab:srcCompat="@drawable/ic_arrow_back_black_24dp"/>

        </jahirfiquitiva.libs.fabsmenu.FABsMenu>

    </jahirfiquitiva.libs.fabsmenu.FABsMenuLayout>

</android.support.design.widget.CoordinatorLayout>
