<resources>
    <string name="app_name">Baking Time</string>
    <string name="title_steps_detail">Step description</string>
    <string name="retry">Retry</string>
    <string name="recipes_loading_error">There was a problem loading the recipes</string>
    <string name="alt_recipe_image">Recipe\'s illustrative image</string>
    <string name="alt_step_movie">A movie guide is available</string>
    <string name="step_number">step %d</string>
    <string name="alt_step_thumb">Image thumbnail for this step</string>
    <string name="step_video_available">video guide available</string>
    <string name="alt_recipe_serving">Servings</string>
    <string name="ingredients">Ingredients</string>
    <!-- "1.2 kg of rice" -->
    <string name="ingredient_format">%s %s of %s</string>
    <string name="alt_step_backdrop">Step backdrop</string>
    <string name="step_go_to_next">Next step</string>
    <string name="step_go_to_previous">Previous step</string>
    <string name="step_jump_last">Yeah! You\'ve done the last step!</string>
    <string name="step_jump_first">You should begin from here :)</string>

    <plurals name="recipe_servings_description">
        <item quantity="one">Makes %d serving</item>
        <item quantity="other">Makes %d servings</item>
    </plurals>

    <!-- Recipe widget -->
    <string name="appwidget_text">Recipe ingredients</string>
    <string name="recipe_widget_configure_choose">Please choose a recipe</string>
</resources>
