<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_step_list" />

</android.support.design.widget.CoordinatorLayout>
